# test_newabstract

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  dllmain.cpp
src/Commands/: Command.cpp
src/Ext/: All.cpp  ShitClass.cpp  ShitClass.h
src/Utilities/: Debug.h  DebugLog.cpp  Stream.h
